--- a/index-real.html
+++ b/index-real.html
@@ -25,7 +25,7 @@ $(function() {
 <h1 class="en">Nora Zhao</h1>
 <h1 class="zh">赵子娴</h1>
 <br>
-<div class="iframeWrapper">
+<div class="iframeWrapper iframe60">
   <iframe src="page/sound.html"></iframe>
 </div>
 </main>
