--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <h1 class="en">Coming Soon</h1>
 <br>
-<div class="iframeWrapper">
+<div class="iframeWrapper iframe60">
   <iframe src="page/sound-disabled.html"></iframe>
 </div>
 </main>
