--- a/glitch-room.html
+++ b/glitch-room.html
@@ -27,18 +27,25 @@ $(function() {
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
 <img src="img/glitch-room/1b.png" alt="Glitch Room by Nora Zhao">
 
+<h6 class="en imgDescription">A screenshot from the model customisation page.</h6>
+<h6 class="zh imgDescription">模型自定义页面截图。</h6>
+
 <section>
   <p class="en text">
     Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
     <br>
     The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
     <br>
-    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen gra phic output.
+    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
+    <br>
+    Link to the website: <a href="https://glitchroom.com">glitchroom.com</a>
   </p>
   <p class="zh text">
     故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
     <br>
     该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
+    <br>
+    网站链接： <span lang="en"><a href="https://glitchroom.com">GLITCHROOM.COM</a></span>
   </p>
 </section>
 
