--- a/glitch-room.html
+++ b/glitch-room.html
@@ -25,9 +25,9 @@ $(function() {
 <h1 class="en">Glitch Room</h1>
 <h1 class="zh">故障房间</h1>
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
-<img src="img/glitch-room/1b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/1-5b2.png" alt="Glitch Room by Nora Zhao">
 
-<h6 class="en imgDescription">A screenshot from the model customisation page.</h6>
+<h6 class="en imgDescription">A model customisation page screenshot.</h6>
 <h6 class="zh imgDescription">模型自定义页面截图。</h6>
 
 <section>
@@ -56,8 +56,8 @@ $(function() {
 <img src="img/glitch-room/6b.png" alt="Glitch Room by Nora Zhao">
 <img src="img/glitch-room/7b.png" alt="Glitch Room by Nora Zhao">
 
-<h6 class="en imgDescription">Screenshots of 3D models in VR view on glitchroom.com.</h6>
-<h6 class="zh imgDescription">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</h6>
+<h6 class="en imgDescription">Screenshots of 3D models in VR view.</h6>
+<h6 class="zh imgDescription">三维模型在虚拟现实空间中的截图。</h6>
 </main>
 
 <div class="pageDivider"></div>
