--- a/coordinate-converter.html
+++ b/coordinate-converter.html
@@ -11,9 +11,9 @@
 <body>
 <div id="navigation"></div>
 <script type="text/javascript">
-$(function() {
-  $("#navigation").load("navigation.html");
-});
+  $(function() {
+    $("#navigation").load("navigation.html");
+  });
 </script>
 
 <main>
@@ -55,7 +55,6 @@ $(function() {
 </div>
 
 
-
 <div class="iframeWrapper iframe60">
   <iframe src="page/p5-1.html"></iframe>
 </div>
@@ -73,22 +72,25 @@ $(function() {
 </main>
 
 <div class="pageDivider"></div>
-<a href="rtw.html"> <!-- change link -->
-  <p class="en nextText">Next Project</p>
-  <p class="zh nextText">下一个项目</p>
-  <div id="nextPage"></div>
-</a>
-<script type="text/javascript">
-$(function() {
-  $("#nextPage").load("rtw.html main"); // change link
-});
-</script>
+
+<div class="nextPageDiv">
+  <a href="rtw.html"> <!-- change link -->
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下一个项目</p>
+    <div id="nextPage"></div>
+  </a>
+  <script type="text/javascript">
+    $(function() {
+      $("#nextPage").load("rtw.html main"); // change link
+    });
+  </script>
+</div>
 
 <div id="footer"></div>
 <script type="text/javascript">
-$(function() {
-  $("#footer").load("footer.html");
-});
+  $(function() {
+    $("#footer").load("footer.html");
+  });
 </script>
 </body>
 </html>
