--- a/mockup.html
+++ b/mockup.html
@@ -11,10 +11,10 @@
 
 <body>
 <div id="navigation"></div>
-<script type="text/javascript">
-$(function() {
-  $("#navigation").load("navigation.html");
-});
+  <script type="text/javascript">
+  $(function() {
+    $("#navigation").load("navigation.html");
+  });
 </script>
 
 <main>
@@ -47,24 +47,26 @@ $(function() {
 
 <div class="pageDivider"></div>
 
-<!-- place link-->
-<a href=".html">
-  <p class="en nextText">Next Project</p>
-  <p class="zh nextText">下一个项目</p>
-  <div id="nextPage"></div>
-</a>
-<script type="text/javascript">
-$(function() {
-  // place link
-  $("#nextPage").load(".html main");
-});
-</script>
+<div class="nextPageDiv">
+  <!-- place link-->
+  <a href=".html">
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下一个项目</p>
+    <div id="nextPage"></div>
+  </a>
+  <script type="text/javascript">
+    $(function() {
+      // place link
+      $("#nextPage").load(".html main");
+    });
+  </script>
+</div>
 
 <div id="footer"></div>
 <script type="text/javascript">
-$(function() {
-  $("#footer").load("footer.html");
-});
+  $(function() {
+    $("#footer").load("footer.html");
+  });
 </script>
 </body>
 </html>
