--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -18,8 +18,8 @@ $(function() {
 
 <main>
 <section class="pageTop">
-  <p class="en">I'm a freelance graphic designer. For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
-  <p class="zh">我是一名自由职业平面设计师。如果您有项目或合作需求，可通过<span lang="en">norazhaodesign@gmail.com</span>联系我。</p>
+  <p class="en">For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
+  <p class="zh">如果您有项目或合作需求，可通过<span lang="en">norazhaodesign@gmail.com</span>联系我。</p>
 </section>
 
 <h1 class="en">About and Contact</h1>
@@ -28,7 +28,7 @@ $(function() {
 
 <section>
   <p class="en text">
-    My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+    My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
     <br>
     I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   </p>
