--- a/index-real.html
+++ b/index-real.html
@@ -17,17 +17,241 @@
 </script>
 
 <main>
-<section class="pageTop">
-  <p class="en">I'm a designer working across the areas of generative design, branding and conventional graphic design.</p>
-  <p class="zh">我是一名实践于衍生式设计、品牌设计和传统的平面设计等领域的设计师。</p>
+<!-- top text -->
+<div style="z-index: 2; position: absolute; background-color: white; width: 100%;">
+  <section class="pageTop">
+    <p class="en">I'm a designer working across the areas of generative design, branding and conventional graphic design.</p>
+    <p class="zh">我是一名实践于衍生式设计、品牌设计和传统的平面设计等领域的设计师。</p>
+  </section>
+</div>
+
+<!-- three.js code -->
+<div>
+  <script src="js/three.min.js"></script>
+  <style media="screen">
+  .text {
+    font-family: 'Roboto', sans-serif;
+    z-index: 1;
+    position: absolute;
+    bottom: 1%;
+    left: 0.4%;
+    right: 0.5%;
+    text-transform: uppercase;
+    font-size: 1.58vw;
+    text-align: center;
+    margin: auto;
+  }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  </style>
+  <div id = "webgl"></div>
+  <script>
+    // scene
+    var scene = new THREE.Scene();
+
+    // camera
+    var camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 0, 1);
+    camera.lookAt(new THREE.Vector3(0, 0, 0));
+
+    // define geometry
+    function getSphere(x, y, z) {
+      var geometry = new THREE.SphereGeometry(x, y, z);
+      var material = new THREE.MeshBasicMaterial({
+        color: 0xffffff,
+        transparent: true,
+        opacity: 1,
+        side: THREE.DoubleSide
+      });
+      var mesh = new THREE.Mesh(geometry, material);
+      return mesh;
+    }
+
+    // place geometry
+    var [obj1, obj2, obj3] = [getSphere(5, 6, 6), getSphere(5, 6, 6), getSphere(5, 6, 6)];
+
+    var group = new THREE.Group();
+    group.add(obj1, obj2, obj3);
+    group.position.set(0, 0, 0);
+    group.scale.set(1, 1, 1);
+
+    // initail rotation status
+    obj1.rotation.set(Math.random() * Math.PI * 2, Math.random() * Math.PI * 2, Math.random() * Math.PI * 2);
+    obj2.rotation.set(Math.random() * Math.PI * 2, Math.random() * Math.PI * 2, Math.random() * Math.PI * 2);
+    obj3.rotation.set(Math.random() * Math.PI * 2, Math.random() * Math.PI * 2, Math.random() * Math.PI * 2);
+
+    scene.add(group);
+
+    // render
+    var renderer = new THREE.WebGLRenderer({preserveDrawingBuffer: true});
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setClearColor('rgb(255, 255, 255)');
+    document.getElementById('webgl').appendChild(renderer.domElement);
+
+    // update
+    var clock = new THREE.Clock();
+
+    // bigger > rotation faster
+    var [n1, n2, n3, n4, n5, n6, n7, n8, n9] = [Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005, Math.random() * 0.0004 + 0.0005];
+
+    var randomR1 = (Math.PI * 2) * Math.random();
+    var randomG1 = (Math.PI * 2) * Math.random();
+    var randomB1 = (Math.PI * 2) * Math.random();
+    var randomR2 = (Math.PI * 2) * Math.random();
+    var randomG2 = (Math.PI * 2) * Math.random();
+    var randomB2 = (Math.PI * 2) * Math.random();
+    var randomR3 = (Math.PI * 2) * Math.random();
+    var randomG3 = (Math.PI * 2) * Math.random();
+    var randomB3 = (Math.PI * 2) * Math.random();
+
+    // bigger > color change slower
+    var [t1, t2, t3, t4, t5, t6, t7, t8, t9] = [Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5, Math.random() + 5];
+
+    var update = function() {
+
+      obj1.rotation.x -= n1; obj1.rotation.y += n2; obj1.rotation.z -= n3;
+      obj2.rotation.x += n4; obj2.rotation.y -= n5; obj2.rotation.z -= n6;
+      obj3.rotation.x -= n7; obj3.rotation.y += n8; obj3.rotation.z += n9;
+
+      var timeElapsed = clock.getElapsedTime();
+
+      // sound value to decide color brightness
+        var r1 = Math.floor((Math.sin(timeElapsed/t1 + randomR1) +1) /2 * 100 + 56);
+        var g1 = Math.floor((Math.sin(timeElapsed/t2 + randomG1) +1) /2 * 100 + 56);
+        var b1 = Math.floor((Math.sin(timeElapsed/t3 + randomB1) +1) /2 * 100 + 56);
+        obj1.material.color.set('rgb('+r1+','+g1+','+b1+')');
+
+        var r2 = Math.floor((Math.sin(timeElapsed/t4 + randomR2) +1) /2 * 156 + 100);
+        var g2 = Math.floor((Math.sin(timeElapsed/t5 + randomG2) +1) /2 * 156 + 100);
+        var b2 = Math.floor((Math.sin(timeElapsed/t6 + randomB2) +1) /2 * 156 + 100);
+        obj2.material.color.set('rgb('+r2+','+g2+','+b2+')');
+
+        var r3 = Math.floor((Math.sin(timeElapsed/t7 + randomR3) +1) /2 * 156 + 100);
+        var g3 = Math.floor((Math.sin(timeElapsed/t8 + randomG3) +1) /2 * 156 + 100);
+        var b3 = Math.floor((Math.sin(timeElapsed/t9 + randomB3) +1) /2 * 156 + 100);
+        obj3.material.color.set('rgb('+r3+','+g3+','+b3+')');
+
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setPixelRatio(window.devicePixelRatio); // resolution for hd-dpi devices
+      renderer.render (scene, camera);
+      setTimeout( function() { requestAnimationFrame (function() {
+        update(scene, camera);
+      }) }, 1000 / 60 );
+    }
+
+    update();
+  </script>
+</div>
+
+<!-- project card -->
+<section class="grid3 gridxto2" style="padding-top: 6vmax;">
+  <style>
+    .card {
+      border: 1px solid black;
+      border-radius: 0px;
+      cursor: pointer;
+    }
+    .card:hover {
+      border: 1px solid blueviolet;
+      background-color: lavender;
+      color: blueviolet;
+    }
+    div.card p {
+      margin: 1vmax 0 0 0;
+      padding: 0 1vmax;
+    }
+    div.card h6 {
+      margin: 0 0 1vmax 0;
+      padding: 0 1vmax;
+    }
+    div.card div {
+      width: 100%;
+      padding-top: 100%;
+      position: relative;
+    }
+    div.card img {
+      position: absolute;
+      top: 0; left: 0; bottom: 0; right: 0;
+      margin: 0;
+    }
+  </style>
+
+  <div class="card" onclick="window.location.href='glitch-room.html';">
+    <div>
+      <img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao">
+    </div>
+    <p class="en">Glitch Room</p>
+    <h6 class="en">An interactive VR site which generates customised glitching patterns.</h6>
+  </div>
+
+  <div class="card"  onclick="window.location.href='weather-sphere.html';">
+    <div>
+      <img src="img/weather-sphere/cover.jpg" alt="Weather Sphere by Nora Zhao">
+    </div>
+    <p class="en">Weather Sphere</p>
+    <h6 class="en">Visualisation of a city's live weather data in the form of a 3D sphere.</h6>
+  </div>
+
+  <div class="card"  onclick="window.location.href='glitch-pattern.html';">
+    <div>
+      <img src="img/glitch-pattern/cover.png" alt="Glitch Pattern by Nora Zhao">
+    </div>
+    <p class="en">Glitch Pattern</p>
+    <h6 class="en">Patterned images generated with the z-fighting glitch.</h6>
+  </div>
+
+  <div class="card" onclick="window.location.href='coordinate-converter.html';">
+    <div>
+      <img src="img/coordinate-converter/cover.jpg" alt="Coordinate Converter by Nora Zhao">
+    </div>
+    <p class="en">Coordinate Converter</p>
+    <h6 class="en">Exploration of pattern and movement thorough creative coding.</h6>
+  </div>
+
+  <div class="card" onclick="window.location.href='rtw.html';">
+    <div>
+      <img src="img/rtw/cover.jpg" alt="RTW by Nora Zhao">
+    </div>
+    <p class="en">RTW</p>
+    <h6 class="en">Brand identity for an apparel company that provides classical quality products with a reasonable price.</h6>
+  </div>
+
+  <div class="card" onclick="window.location.href='omdia.html';">
+    <div>
+      <img src="img/omdia/cover.png" alt="Omdia by Nora Zhao">
+    </div>
+    <p class="en">Omdia</p>
+    <h6 class="en">Brand identity framework for a global technology research powerhouse.</h6>
+  </div>
+
+  <div class="card" onclick="window.location.href='peacebird.html';">
+    <div>
+      <img src="img/peacebird/cover.png" alt="Peacebird by Nora Zhao">
+    </div>
+    <p class="en">Peacebird</p>
+    <h6 class="en">A refreshed visual identity for one of the best selling Chinese fashion brands.</h6>
+  </div>
+
+  <div class="card" onclick="window.location.href='byton.html';">
+    <div>
+      <img src="img/byton/cover.png" alt="Byton by Nora Zhao">
+    </div>
+    <p class="en">Byton</p>
+    <h6 class="en">Tweaks on the visual assets of a startup electric car company to inject vibrance.</h6>
+  </div>
+
+  <div class="card" onclick="window.location.href='chinese-grid.html';">
+    <div>
+      <img src="img/chinese-grid/cover.png" alt="Chinese Grid by Nora Zhao">
+    </div>
+    <p class="en">Chinese Grid</p>
+    <h6 class="en">A geometric grid system which generates Simplified Chinese characters in both square and circular styles.</h6>
+  </div>
 </section>
 
-<h1 class="en">Nora Zhao</h1>
-<h1 class="zh">赵子娴</h1>
-<br>
-<div class="iframeWrapper iframe60">
-  <iframe src="page/sound.html"></iframe>
-</div>
+<h1></h1>
 </main>
 
 <div id="footer"></div>
