--- a/navigation.html
+++ b/navigation.html
@@ -6,7 +6,7 @@
     position: fixed;
     top: 2vmax;
     left: 1.5vmax;
-    z-index: 1;
+    z-index: 5;
     cursor: pointer;
   }
 </style>
@@ -29,20 +29,20 @@
     style="margin: 0;
            font-size: 2.2vmax;
            line-height: 1;">
-    <a href="index.html">Nora Zhao</a>
+    <a href="index-real.html">Nora Zhao</a>
 </h1>
 <h1 class="zh home"
     style="margin: 0;
            font-size: 1.82vmax;
            line-height: 1.4;">
-    <a href="index.html">赵子娴</a>
+    <a href="index-real.html">赵子娴</a>
 </h1>
 <style media="screen">
   .home {
     position: fixed;
     top: 2vmax;
     left: 4.6vmax;
-    z-index: 1;
+    z-index: 5;
   }
 </style>
 
@@ -135,8 +135,13 @@
     <!-- sidebar menu contents ---------------------------------------- -->
     <div style="margin-top: 4vh;"></div>
     <p>
-      <a class="en" href="index.html">Home Page</a>
-      <a class="zh" href="index.html">主页</a>
+      <a class="en" href="index-real.html">Home Page</a>
+      <a class="zh" href="index-real.html">主页</a>
+    </p>
+
+    <p>
+      <a class="en" href="about-and-contact.html">About and Contact</a>
+      <a class="zh" href="about-and-contact.html">简介及联系方式</a>
     </p>
 
     <p class="en">Coding Projects:</p>
@@ -181,11 +186,6 @@
 
     <p class="en">Other:</p>
     <p class="zh">其他：</p>
-
-    <p>
-      <a class="en" href="about-and-contact.html">About and Contact</a>
-      <a class="zh" href="about-and-contact.html">简介及联系方式</a>
-    </p>
   </nav>
 </div>
 <style media="screen">
@@ -199,7 +199,7 @@
   #sideNav {
     height: 100%; /* 100% full-height */
     width: 0; /* 0 width - change this with JavaScript */
-    z-index: 2; /* stay on top */
+    z-index: 5; /* stay on top */
     position: fixed;
     top: 0;
     left: 0;
