--- a/index-real.html
+++ b/index-real.html
@@ -179,73 +179,55 @@
   </style>
 
   <div class="card" onclick="window.location.href='glitch-room.html';">
-    <div>
-      <img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao">
-    </div>
+    <div><img src="img/glitch-room/cover.png" alt="Glitch Room by Nora Zhao"></div>
     <p class="en">Glitch Room</p>
     <h6 class="en">An interactive VR site which generates customised glitching patterns.</h6>
   </div>
 
   <div class="card"  onclick="window.location.href='weather-sphere.html';">
-    <div>
-      <img src="img/weather-sphere/cover.jpg" alt="Weather Sphere by Nora Zhao">
-    </div>
+    <div><img src="img/weather-sphere/cover.jpg" alt="Weather Sphere by Nora Zhao"></div>
     <p class="en">Weather Sphere</p>
     <h6 class="en">Visualisation of a city's live weather data in the form of a 3D sphere.</h6>
   </div>
 
   <div class="card"  onclick="window.location.href='glitch-pattern.html';">
-    <div>
-      <img src="img/glitch-pattern/cover.png" alt="Glitch Pattern by Nora Zhao">
-    </div>
+    <div><img src="img/glitch-pattern/cover.png" alt="Glitch Pattern by Nora Zhao"></div>
     <p class="en">Glitch Pattern</p>
     <h6 class="en">Patterned images generated with the z-fighting glitch.</h6>
   </div>
 
   <div class="card" onclick="window.location.href='coordinate-converter.html';">
-    <div>
-      <img src="img/coordinate-converter/cover.jpg" alt="Coordinate Converter by Nora Zhao">
-    </div>
+    <div><img src="img/coordinate-converter/cover.jpg" alt="Coordinate Converter by Nora Zhao"></div>
     <p class="en">Coordinate Converter</p>
     <h6 class="en">Exploration of pattern and movement thorough creative coding.</h6>
   </div>
 
   <div class="card" onclick="window.location.href='rtw.html';">
-    <div>
-      <img src="img/rtw/cover.jpg" alt="RTW by Nora Zhao">
-    </div>
+    <div><img src="img/rtw/cover.jpg" alt="RTW by Nora Zhao"></div>
     <p class="en">RTW</p>
     <h6 class="en">Brand identity for an apparel company that provides classical quality products with a reasonable price.</h6>
   </div>
 
   <div class="card" onclick="window.location.href='omdia.html';">
-    <div>
-      <img src="img/omdia/cover.png" alt="Omdia by Nora Zhao">
-    </div>
+    <div><img src="img/omdia/cover.png" alt="Omdia by Nora Zhao"></div>
     <p class="en">Omdia</p>
     <h6 class="en">Brand identity framework for a global technology research powerhouse.</h6>
   </div>
 
   <div class="card" onclick="window.location.href='peacebird.html';">
-    <div>
-      <img src="img/peacebird/cover.png" alt="Peacebird by Nora Zhao">
-    </div>
+    <div><img src="img/peacebird/cover.png" alt="Peacebird by Nora Zhao"></div>
     <p class="en">Peacebird</p>
     <h6 class="en">A refreshed visual identity for one of the best selling Chinese fashion brands.</h6>
   </div>
 
   <div class="card" onclick="window.location.href='byton.html';">
-    <div>
-      <img src="img/byton/cover.png" alt="Byton by Nora Zhao">
-    </div>
+    <div><img src="img/byton/cover.png" alt="Byton by Nora Zhao"></div>
     <p class="en">Byton</p>
     <h6 class="en">Tweaks on the visual assets of a startup electric car company to inject vibrance.</h6>
   </div>
 
   <div class="card" onclick="window.location.href='chinese-grid.html';">
-    <div>
-      <img src="img/chinese-grid/cover.png" alt="Chinese Grid by Nora Zhao">
-    </div>
+    <div><img src="img/chinese-grid/cover.png" alt="Chinese Grid by Nora Zhao"></div>
     <p class="en">Chinese Grid</p>
     <h6 class="en">A geometric grid system which generates Simplified Chinese characters in both square and circular styles.</h6>
   </div>
