--- a/index-real.html
+++ b/index-real.html
@@ -236,11 +236,19 @@
 <h1></h1>
 </main>
 
-<div id="footer"></div>
-<script type="text/javascript">
-  $(function() {
-    $("#footer").load("footer.html");
-  });
+<section>
+  <footer>
+    <h6 class="en footer">© 2020 Nora Zhao All Rights Reserved. Design and Code by Nora Zhao.</h6>
+    <h6 class="zh footer">© 2020 赵子娴 保留所有权利。网页设计及代码编写由我本人完成。</h6>
+  </footer>
+</section>
+
+<style media="screen">
+  h6.footer {
+    margin-top: 1vmax;
+    margin-bottom: 1vmax;
+  }
+</style>
 </script>
 </body>
 </html>
