--- a/navigation.html
+++ b/navigation.html
@@ -35,7 +35,7 @@
     style="margin: 0;
            font-size: 1.82vmax;
            line-height: 1.4;">
-    <a href="index-real.html">赵子娴</a>
+    <a href="index-real.html">Nora Zhao</a>
 </h1>
 <style media="screen">
   .home {
