--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Me 个人简介</title>
+<title>About Me</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -18,29 +18,22 @@ $(function() {
 
 <main>
 <section class="pageTop">
-  <p class="en">For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
-  <p class="zh">如果您有项目或合作需求，可通过<span lang="en">norazhaodesign@gmail.com</span>联系我。</p>
+  <p>For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
 </section>
 
-<h1 class="en">About and Contact</h1>
-<h1 class="zh">简介及联系方式</h1>
-<img src="img/me.jpg" alt="Nora Zhao">
+<h1>About and Contact</h1>
+<img src="img/me.jpg" alt="">
 
 <section>
-  <p class="en text">
+  <p class="text">
     My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
     <br>
     I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   </p>
-  <p class="zh text">
-    我叫赵子娴，是一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域包括衍生式设计、品牌设计和传统的平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。
-    <br>
-    我持有中国传媒大学的工商管理本科学位（<span lang="en">2016</span>）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，<span lang="en">2018</span>）和平面媒体设计硕士学位（优秀，<span lang="en">2020</span>）。
-  </p>
 </section>
 
 <section>
-  <p class="en">
+  <p>
     Email: norazhaodesign@gmail.com
     <br>
     Mobile: +86 132 6007 1686
@@ -50,17 +43,6 @@ $(function() {
     Instagram: norazhaodesign
     <br>
     Linkedin: norazhaodesign -->
-  </p>
-  <p class="zh">
-    电子邮箱<span lang="en">: norazhaodesign@gmail.com</span>
-    <br>
-    手机<span lang="en">: +86 132 6007 1686</span>
-    <!-- <br>
-    微信<span lang="en">: leonorao</span>
-    <br>
-    <span lang="en">Ins: norazhaodesign</span>
-    <br>
-    领英<span lang="en">: norazhaodesign</span> -->
   </p>
 </section>
 
