--- a/byton.html
+++ b/byton.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Byton 拜腾汽车</title>
+<title>Byton</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -18,24 +18,19 @@
 
 <main>
 <section class="pageTop">
-  <p class="en">Tweaks on the visual assets of a startup electric car company to inject vibrance.<p>
-  <p class="zh">新兴电动汽车品牌的视觉资产年轻化调整。</p>
+  <p>Tweaks on the visual assets of a startup electric car company to inject vibrance.<p>
 </section>
 
-<h1 class="en">Byton</h1>
-<h1 class="zh">拜腾汽车</h1>
+<h1>Byton</h1>
 
 <img src="img/byton/3s.jpg" alt="Byton by Nora Zhao">
 
 <!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription"></h6>
 
 <section>
   <!-- write body text -->
-  <p class="en text">
-  </p>
-  <p class="zh text">
+  <p class="text">
   </p>
 </section>
 
@@ -45,8 +40,7 @@
 
 <div class="nextPageDiv">
   <a href="chinese-grid.html"> <!-- change link -->
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
