--- a/chinese-grid.html
+++ b/chinese-grid.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chinese Grid 中文文字网格</title>
+<title>Chinese Grid</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -18,41 +18,33 @@
 
 <main>
 <section class="pageTop">
-  <p class="en">A geometric grid system which generates Simplified Chinese characters in both square and circular styles.<p>
-  <p class="zh">可同时生成方形和圆形简体中文字形的几何网格系统。</p>
+  <p>A geometric grid system which generates Simplified Chinese characters in both square and circular styles.<p>
 </section>
 
-<h1 class="en">Chinese Grid</h1>
-<h1 class="zh">中文文字网格</h1>
+<h1>Chinese Grid</h1>
 <div class="iframeWrapper iframe60">
   <iframe src="page/chinese-grid.html"></iframe>
 </div>
-<h6 class="en imgDescription">Click on the components to construt a figure of your choice and have two generated outcomes.</h6>
-<h6 class="zh imgDescription">点击部件以组建您想要的文字或图形，由系统生成两种结果。</h6>
+<h6 class="imgDescription">Click on the components to construt a figure of your choice and have two generated outcomes.</h6>
 
 <section>
-  <p class="en text">
+  <p class="text">
     In terms of making a new Chinese font, traditionally designers have to construct and adjust each character manually with pre-designed basic strokes. Unlike English, where there are only limited number of alphabets and symbols, the vast number of Chinese characters require the character making process to be repeated for at least a few thousands, sometimes tens of thousands times.
     <!-- add another paragraph to state the reason of making this system -->
     <br>
     The project aims at challenging the traditional method of Chinese type design with a systematic approach.
   </p>
-  <p class="zh text">
-    产出一套中文字体的传统方法往往是由设计师根据基本笔画一笔一划地手动拼写和调整每个文字。因为汉字字符数目巨大，这个过程通常要重复成千上万次。通过建立一个几何化的体系，本项目旨在探索和挑战传统的字体设计方法。
-  </p>
 </section>
 
 <img src="img/chinese-grid/grid.png" alt="Chinese Grid by Nora Zhao">
-<h6 class="en imgDescription">Each point and line has its corresponding part in the system, which allows the simultaneous generation of a character in two styles.</h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription">Each point and line has its corresponding part in the system, which allows the simultaneous generation of a character in two styles.</h6>
 </main>
 
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
   <a href="glitch-room.html"> <!-- change link -->
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
