--- a/mockup.html
+++ b/mockup.html
@@ -20,26 +20,21 @@
 <main>
 <section class="pageTop">
   <!-- write project summary-->
-  <p class="en"><p>
-  <p class="zh"></p>
+  <p></p>
 </section>
 
 <!-- write project title -->
-<h1 class="en"></h1>
-<h1 class="zh"></h1>
+<h1></h1>
 
 <!-- place img -->
 <img src="img/" alt="by Nora Zhao">
 
 <!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription"></h6>
 
 <section>
   <!-- write body text -->
-  <p class="en text">
-  </p>
-  <p class="zh text">
+  <p class="text">
   </p>
 </section>
 
@@ -50,8 +45,7 @@
 <div class="nextPageDiv">
   <!-- place link-->
   <a href=".html">
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
