--- a/omdia.html
+++ b/omdia.html
@@ -18,26 +18,21 @@
 
 <main>
 <section class="pageTop">
-  <p class="en">Brand identity framework for a global technology research powerhouse.<p>
-  <p class="zh">为一个全球科技调研中心设计的品牌识别系统。</p>
+  <p>Brand identity framework for a global technology research powerhouse.<p>
 </section>
 
-<h1 class="en">Omdia</h1>
-<h1 class="zh"><span lang="en">Omdia</span></h1>
+<h1>Omdia</h1>
 
 <!-- place img -->
 <img src="img/" alt="Omdia by Nora Zhao">
 
 <!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription"></h6>
 
 <section>
   <!-- write body text -->
-  <p class="en text">
+  <p class="text">
     Established in 2019 with the combination of the Informa Tech’s research brands (Ovum, Heavy Reading, and Tractica) and the acquired IHS Markit technology research portfolio, Omdia combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media, and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
-  </p>
-  <p class="zh text">
   </p>
 </section>
 
@@ -47,8 +42,7 @@
 
 <div class="nextPageDiv">
   <a href="peacebird.html">
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
