--- a/peacebird.html
+++ b/peacebird.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Peacebird 太平鸟服饰</title>
+<title>Peacebird</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -18,12 +18,10 @@
 
 <main>
 <section class="pageTop">
-  <p class="en">A refreshed visual identity for one of the best selling Chinese fashion brands.<p>
-  <p class="zh">用以适应电子屏幕辨识性的更新版企业视觉识别系统。</p>
+  <p>A refreshed visual identity for one of the best selling Chinese fashion brands.<p>
 </section>
 
-<h1 class="en">Peacebird</h1>
-<h1 class="zh">太平鸟服饰</h1>
+<h1>Peacebird</h1>
 
 <!-- place img -->
 <video autoplay loop
@@ -35,15 +33,11 @@
 
 
 <!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription"></h6>
 
 <section>
-  <p class="en text">
+  <p class="text">
     While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
-  </p>
-  <p class="zh text">
-    在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
   </p>
 </section>
 
@@ -54,7 +48,6 @@
 <div class="nextPageDiv">
   <a href="byton.html">
     <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
