--- a/rtw.html
+++ b/rtw.html
@@ -19,26 +19,21 @@
 <main>
 <section class="pageTop">
   <!-- write project summary-->
-  <p class="en">Brand identity for an apparel company that provides classical quality products with a reasonable price.<p>
-  <p class="zh"></p>
+  <p>Brand identity for an apparel company that provides classical quality products with a reasonable price.<p>
 </section>
 
 <!-- write project title -->
-<h1 class="en">RTW</h1>
-<h1 class="zh"><span lang="en">RTW</span></h1>
+<h1>RTW</h1>
 
 <!-- place img -->
 <img src="img/rtw/1s.jpg" alt="RTW by Nora Zhao">
 
 <!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription"></h6>
 
 <section>
   <!-- write body text -->
-  <p class="en text">
-  </p>
-  <p class="zh text">
+  <p class="text">
   </p>
 </section>
 
@@ -48,8 +43,7 @@
 
 <div class="nextPageDiv">
   <a href="omdia.html">
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
