--- a/weather-sphere.html
+++ b/weather-sphere.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- write title -->
-<title>Weather Sphere 天气球</title>
+<title>Weather Sphere</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -20,12 +20,10 @@
 <main>
 <section class="pageTop">
   <!-- write project summary-->
-  <p class="en">Visualisation of a city's live weather data in the form of a 3D sphere.<p>
-  <p class="zh">以三维球体模型视觉化一个城市的实时天气数据。</p>
+  <p>Visualisation of a city's live weather data in the form of a 3D sphere.<p>
 </section>
 
-<h1 class="en">Weather Sphere</h1>
-<h1 class="zh">天气球</h1>
+<h1>Weather Sphere</h1>
 
 <!-- place img -->
 <div class="iframeWrapper iframe60">
@@ -33,14 +31,11 @@
 </div>
 
 <!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription"></h6>
 
 <section>
   <!-- write body text -->
   <p class="en text">
-  </p>
-  <p class="zh text">
   </p>
 </section>
 
@@ -50,8 +45,7 @@
 
 <div class="nextPageDiv">
   <a href="glitch-pattern.html">
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
