--- a/404.html
+++ b/404.html
@@ -17,14 +17,11 @@ $(function(){
 </script>
 
 <section class="pageTop">
-  <p class="en">
+  <p>
     This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
   </p>
-  <p class="zh">无法找到该页面，请<a href="index.html">点此</a>访问网站主页。</p>
 </section>
 
-<h1 class="en">404 Page Not Found</h1>
-<h1 class="zh">无效页面</h1>
-
+<h1>404 Page Not Found</h1>
 </body>
 </html>
