--- a/coordinate-converter.html
+++ b/coordinate-converter.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Coordinate Converter 坐标转换器</title>
+<title>Coordinate Converter</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -19,21 +19,16 @@
 <main>
 <section class="pageTop">
   <p class="en">Exploration of pattern and movement thorough creative coding.<p>
-  <p class="zh">通过创意编程探索图样与运动轨迹之间的关系。</p>
 </section>
 
-<h1 class="en">Coordinate Converter</h1>
-<h1 class="zh">坐标转换器</h1>
+<h1>Coordinate Converter</h1>
 <img src="img/coordinate-converter/1-2s.jpg" alt="Coordinate Converter by Nora Zhao">
 
 <section>
-  <p class="en text">
+  <p class="text">
     With creative code set up, the artboard coverts a coordinate of your mouse into a dot, a line or a shape. Having many of these elemts combined, the graphic output refelcts the track and speed of your movement.
     <br>
     The concept of time was injected into the body of an image. Unlike a traditional painting, which captures a certain point of time, it extends that point into a "line". Therefore, it records the "antecedently" and "subsequently", and becomes a video-like still image.
-  </p>
-  <p class="zh text">
-
   </p>
 </section>
 
@@ -67,16 +62,14 @@
   <iframe src="page/p5-3.html"></iframe>
 </div>
 
-<h6 class="en imgDescription">Move cursor on the artboard to create visual output. Double click to reset current canvas. Right click to save as image.</h6>
-<h6 class="zh imgDescription"></h6>
+<h6 class="imgDescription">Move cursor on the artboard to create visual output. Double click to reset current canvas. Right click to save as image.</h6>
 </main>
 
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
   <a href="rtw.html"> <!-- change link -->
-    <p class="en nextText">Next Project</p>
-    <p class="zh nextText">下一个项目</p>
+    <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
