--- a/navigation.html
+++ b/navigation.html
@@ -25,16 +25,10 @@
 
 
 <!-- back to home page ---------------------------------------- -->
-<h1 class="en home"
+<h1 class="home"
     style="margin: 0;
            font-size: 2.2vmax;
            line-height: 1;">
-    <a href="index-real.html">Nora Zhao</a>
-</h1>
-<h1 class="zh home"
-    style="margin: 0;
-           font-size: 1.82vmax;
-           line-height: 1.4;">
     <a href="index-real.html">Nora Zhao</a>
 </h1>
 <style media="screen">
@@ -55,142 +49,51 @@
   <nav>
     <img id="closeBtn" onclick="closeNav()" src="img/icon/close.svg" alt="Close">
 
-
-
-
-
-    <!-- language selector ---------------------------------------- -->
-    <div id="radioToolbar">
-      <input type="radio" id="enBtn" name="language" value="en" checked>
-      <label for="enBtn">
-        <p style="font-family: 'canela-thin', serif;
-                  font-size: 2vmax;
-                  margin: 0;">English</p>
-      </label>
-      <p style="font-family: 'canela-thin', serif;
-                font-size: 2vmax;
-                display: inline-block;
-                margin: 0;">·</p>
-      <input type="radio" id="zhBtn" name="language" value="zh">
-      <label for="zhBtn">
-        <p style="font-family: 'STSong', '华文宋体', 'NSimSun', '新宋体', 'SimSun', '宋体', serif;
-                  font-size: 1.6vmax;
-                  position: relative;
-                  bottom: 0.21vmax;
-                  margin: 0;">中文</p>
-      </label>
-    </div>
-    <style media="screen">
-      /* (style ref https://jsfiddle.net/markheath/azk2cL45) */
-      #radioToolbar {
-        display: inline-block;
-        margin-left: 1vmax;
-      }
-      #radioToolbar input[type="radio"] { /* hide default radio buttons */
-        opacity: 0;
-        position: fixed;
-        width: 0;
-        }
-      #radioToolbar label { /* each botton */
-        display: inline-block;
-        margin-right: 0.2vmax;
-      }
-      #radioToolbar label:hover {
-        cursor: pointer;
-      }
-      #radioToolbar input[type="radio"]:checked + label { /* (ref https://css-tricks.com/change-color-of-svg-on-hover) */
-        /* to turn black into another color (tool https://codepen.io/sosuke/pen/Pjoqqp) */
-        filter: invert(24%) sepia(65%) saturate(3318%) hue-rotate(261deg) brightness(87%) contrast(104%);
-      }
-    </style>
-    <script type="text/javascript">
-      // record & retrive the selection status (ref https://stackoverflow.com/a/53298040/11975753)
-      $(function() {
-        $("[name='language']").click(function(){
-          var value = $(this).val();
-          localStorage.setItem("option", value);
-        });
-        var itemValue = localStorage.getItem("option");
-        if (itemValue !== null) {
-          $("input[value=\""+itemValue+"\"]").click();
-        }
-      });
-      // change the display of page contents based on selected language
-      $("[name='language']").click(function() {
-        if (document.getElementById('enBtn').checked) {
-          $(".en").css("display", "block");
-          $(".zh").css("display", "none");
-        }
-        else if (document.getElementById('zhBtn').checked) {
-          $(".zh").css("display", "block");
-          $(".en").css("display", "none");
-        }
-      });
-    </script>
-
-
-
-
-
     <!-- sidebar menu contents ---------------------------------------- -->
     <div style="margin-top: 4vh;"></div>
     <p>
-      <a class="en" href="index-real.html">Home Page</a>
-      <a class="zh" href="index-real.html">主页</a>
+      <a href="index-real.html">home page</a>
+      <br>
+      <a href="about-and-contact.html">about and contact</a>
     </p>
 
-    <p>
-      <a class="en" href="about-and-contact.html">About and Contact</a>
-      <a class="zh" href="about-and-contact.html">简介及联系方式</a>
+    <p>CODING PROJECTS:
+      <br>
+      <a href="glitch-room.html">- glitch room</a>
+      <br>
+      <a href="weather-sphere.html">- weather sphere</a>
+      <br>
+      <a href="glitch-pattern.html">- glitch pattern</a>
+      <br>
+      <a href="coordinate-converter.html">- coordinate converter</a>
     </p>
 
-    <p class="en">Coding Projects:</p>
-    <p class="zh">编程设计项目：</p>
-    <p>
-      <a class="en" href="glitch-room.html">- Glitch Room</a>
-      <a class="zh" href="glitch-room.html">- 故障房间</a>
+    <p>BRANDING PROJECTS:
       <br>
-      <a class="en" href="weather-sphere.html">- Weather Sphere</a>
-      <a class="zh" href="weather-sphere.html">- 天气球</a>
+      <a href="rtw.html">- rtw</a>
       <br>
-      <a class="en" href="glitch-pattern.html">- Glitch Pattern</a>
-      <a class="zh" href="glitch-pattern.html">- 故障图纹</a>
+      <a href="omdia.html">- omdia</a>
       <br>
-      <a class="en" href="coordinate-converter.html">- Coordinate Converter</a>
-      <a class="zh" href="coordinate-converter.html">- 坐标转换器</a>
-    </p>
-
-    <p class="en">Branding Projects:</p>
-    <p class="zh">品牌设计项目：</p>
-    <p>
-      <a class="en" href="rtw.html">- RTW</a>
-      <a class="zh" href="rtw.html">- <span lang="en">RTW</span></a>
+      <a href="peacebird.html">- peacebird</a>
       <br>
-      <a class="en" href="omdia.html">- Omdia</a>
-      <a class="zh" href="omdia.html">- <span lang="en">Omdia</span></a>
-      <br>
-      <a class="en" href="peacebird.html">- Peacebird</a>
-      <a class="zh" href="peacebird.html">- 太平鸟服饰</a>
-      <br>
-      <a class="en" href="byton.html">- Byton</a>
-      <a class="zh" href="byton.html">- 拜腾汽车</a>
+      <a href="byton.html">- byton</a>
     </p>
 
 
-    <p class="en">Design Projects:</p>
-    <p class="zh">平面设计项目：</p>
-    <p>
-      <a class="en" href="chinese-grid.html">- Chinese Grid</a>
-      <a class="zh" href="chinese-grid.html">- 中文文字网格</a>
+    <p>DESIGN PROJECTS:
+      <br>
+      <a href="chinese-grid.html">- chinese grid</a>
     </p>
 
-    <p class="en">Other:</p>
-    <p class="zh">其他：</p>
+    <p>OTHER:</p>
   </nav>
 </div>
 <style media="screen">
   nav {
     margin: 2vmax 1.5vmax; /* nav contents margin */
+  }
+  nav a {
+    padding-left: 2vw;
   }
   #closeBtn {
     width: 2vmax;
@@ -220,7 +123,7 @@
   }
 </style>
 <script type="text/javascript">
-  $("#sideNav a").filter(function() { // add active class to current link (ref https://stackoverflow.com/a/13349151/11975753)
+  $("#sideNav a").filter(function() { // add "active" class to the current link (ref https://stackoverflow.com/a/13349151/11975753)
       return this.href == location.href.replace(/#.*/, "");
   }).addClass("active");
 </script>
